--- a/kubernetes/templates/ingress.yaml
+++ b/kubernetes/templates/ingress.yaml
@@ -83,6 +83,7 @@ metadata:
     nginx.ingress.kubernetes.io/limit-req-status-code: "429"
     nginx.org/mergeable-ingress-type: minion
     kubernetes.io/ingress.class: nginx
+    nginx.org/proxy-buffering: False
     # we need to force an auth header into the request if it doesn't exist, we can do this by telling nginx that /api/v1/test is an auth server (it always returns 200). we could authenticate the staging per user if we wanted to.
     nginx.ingress.kubernetes.io/rewrite-target: /$2
     nginx.ingress.kubernetes.io/auth-url: http://{{ .Values.frontend.host }}.{{ .Release.Namespace }}.svc.cluster.local:{{ .Values.frontend.port }}/api/v1/test
