--- a/kubernetes/templates/ingress.yaml
+++ b/kubernetes/templates/ingress.yaml
@@ -28,6 +28,8 @@ metadata:
     nginx.ingress.kubernetes.io/proxy-body-size: "100m"
     nginx.ingress.kubernetes.io/limit-rps: "50"
     nginx.ingress.kubernetes.io/limit-req-status-code: "429"
+    nginx.org/proxy-buffering: "True"
+    nginx.org/proxy-max-temp-file-size: "1024000m"
     nginx.org/mergeable-ingress-type: master
     kubernetes.io/ingress.class: nginx
     {{ if .Values.deployment.ingress.https_rewrite }}
@@ -78,12 +80,11 @@ metadata:
   name: polytope-ingress-downloads
   annotations:
     # dns.operators.ecmwf.int/on-transport-server: vs-transport-https
-    nginx.ingress.kubernetes.io/proxy-body-size: "100m"
+    # nginx.ingress.kubernetes.io/proxy-body-size: "100m"
     nginx.ingress.kubernetes.io/limit-rps: "50"
     nginx.ingress.kubernetes.io/limit-req-status-code: "429"
     nginx.org/mergeable-ingress-type: minion
     kubernetes.io/ingress.class: nginx
-    nginx.org/proxy-buffering: False
     # we need to force an auth header into the request if it doesn't exist, we can do this by telling nginx that /api/v1/test is an auth server (it always returns 200). we could authenticate the staging per user if we wanted to.
     nginx.ingress.kubernetes.io/rewrite-target: /$2
     nginx.ingress.kubernetes.io/auth-url: http://{{ .Values.frontend.host }}.{{ .Release.Namespace }}.svc.cluster.local:{{ .Values.frontend.port }}/api/v1/test
