--- a/kubernetes/templates/ingress.yaml
+++ b/kubernetes/templates/ingress.yaml
@@ -24,7 +24,8 @@ metadata:
   name: polytope-ingress-master
   annotations:
     dns.operators.ecmwf.int/on-transport-server: vs-transport-https
-    cert-manager.io/cluster-issuer: ov-issuer
+    # cert-manager.io/cluster-issuer: ov-issuer
+    cert-manager.io/cluster-issuer: letsencrypt-nginx
     nginx.ingress.kubernetes.io/proxy-body-size: "100m"
     nginx.ingress.kubernetes.io/limit-rps: "50"
     nginx.ingress.kubernetes.io/limit-req-status-code: "429"
@@ -32,10 +33,10 @@ metadata:
     nginx.org/proxy-max-temp-file-size: "1024000m"
     nginx.org/mergeable-ingress-type: master
     kubernetes.io/ingress.class: nginx
-    nginx.org/location-snippets: |
-      chunked_transfer_encoding off;
-    nginx.ingress.kubernetes.io/configuration-snippet: |
-      chunked_transfer_encoding off;
+    # nginx.org/location-snippets: |
+    #   chunked_transfer_encoding off;
+    # nginx.ingress.kubernetes.io/configuration-snippet: |
+    #   chunked_transfer_encoding off;
     {{ if .Values.deployment.ingress.https_rewrite }}
     nginx.org/redirect-to-https: "True"
     ingress.kubernetes.io/ssl-redirect: "True"
@@ -83,24 +84,47 @@ kind: Ingress
 metadata:
   name: polytope-ingress-downloads
   annotations:
+
+    dns.operators.ecmwf.int/on-transport-server: vs-transport-https
+    # cert-manager.io/cluster-issuer: ov-issuer
+    cert-manager.io/cluster-issuer: letsencrypt-nginx
+    nginx.ingress.kubernetes.io/proxy-body-size: "100m"
+    nginx.ingress.kubernetes.io/limit-rps: "50"
+    nginx.ingress.kubernetes.io/limit-req-status-code: "429"
+    nginx.org/proxy-buffering: "False"
+    nginx.org/proxy-max-temp-file-size: "1024000m"
+    kubernetes.io/ingress.class: nginx
+    # nginx.org/location-snippets: |
+    #   chunked_transfer_encoding off;
+    # nginx.ingress.kubernetes.io/configuration-snippet: |
+    #   chunked_transfer_encoding off;
+    {{ if .Values.deployment.ingress.https_rewrite }}
+    nginx.org/redirect-to-https: "True"
+    ingress.kubernetes.io/ssl-redirect: "True"
+    {{ else }}
+    nginx.org/redirect-to-https: "False"
+    ingress.kubernetes.io/ssl-redirect: "False"
+    {{ end }}
+
+
     # dns.operators.ecmwf.int/on-transport-server: vs-transport-https
     # nginx.ingress.kubernetes.io/proxy-body-size: "100m"
     nginx.ingress.kubernetes.io/limit-rps: "50"
     nginx.ingress.kubernetes.io/limit-req-status-code: "429"
-    nginx.org/mergeable-ingress-type: minion
+    # nginx.org/mergeable-ingress-type: minion
     kubernetes.io/ingress.class: nginx
     # we need to force an auth header into the request if it doesn't exist, we can do this by telling nginx that /api/v1/test is an auth server (it always returns 200). we could authenticate the staging per user if we wanted to.
     # nginx.ingress.kubernetes.io/rewrite-target: /$2
-    nginx.org/rewrites: "serviceName={{ .Values.staging.s3.host }} rewrite=/"
+    # nginx.org/rewrites: "serviceName={{ .Values.staging.s3.host }} rewrite=/"
     nginx.ingress.kubernetes.io/auth-url: http://{{ .Values.frontend.host }}.{{ .Release.Namespace }}.svc.cluster.local:{{ .Values.frontend.port }}/api/v1/test
     nginx.ingress.kubernetes.io/auth-response-headers: Authorization
 
 spec:
   rules:
-  - host: {{ .Values.deployment.public_endpoint_dns_name }}
+  - host: downloads.{{ .Values.deployment.public_endpoint_dns_name }}
     http:
       paths:
-      - path: /api/v1/downloads/
+      - path: /
         pathType: Prefix
         backend:
           service:
@@ -113,6 +137,11 @@ spec:
             port:
               number: {{ .Values.staging.s3.port }}
             {{ end }}
+  tls:
+  - hosts:
+    - downloads.{{ .Values.deployment.public_endpoint_dns_name }}
+    secretName: polytope-tls-4
+
   # tls:
   # - hosts:
   #   - {{ .Values.deployment.public_endpoint_dns_name }}
