--- a/.github/workflows/check-publish.yaml
+++ b/.github/workflows/check-publish.yaml
@@ -27,7 +27,7 @@ jobs:
 
   docs:
     if: |
-      (github.event_name == 'push' && contains(github.ref, 'refs/tags/')) || 
+      (github.event_name == 'push' && contains(github.ref, 'refs/tags/')) ||
       github.ref == 'refs/heads/master'
     name: Build Readthedocs
     runs-on: ubuntu-latest
@@ -61,3 +61,79 @@ jobs:
                 workflow_id: 'publish.yaml',
                 ref: 'master'
             });
+
+  cd:
+    #if: github.event_name == 'push' && contains(github.ref, 'refs/tags/')
+    if: github.event_name == 'push' && github.ref == 'refs/heads/cd'
+    name: Deploy
+    needs: [quality]
+    runs-on: [self-hosted, web-builder]
+    steps:
+      - name: Checkout polytope-deployment repo
+        uses: actions/checkout@v3
+        with:
+          path: polytope-deployment
+
+      - name: Checkout polytope-server repo
+        uses: actions/checkout@v3
+        with:
+          repository: ecmwf/polytope-server
+          path: polytope-server
+
+      - name: Checkout polytope-config repo
+        uses: actions/checkout@v3
+        with:
+          repository: ecmwf/polytope-config
+          path: polytope-config
+          token: ${{ secrets.GH_REPO_READ_TOKEN }}
+
+      - name: Checkout polytope repo
+        uses: actions/checkout@v3
+        with:
+          repository: ecmwf/polytope
+          path: polytope
+
+      - name: Setup python
+        uses: actions/setup-python@v4
+        with:
+          python-version: "3.7"
+
+      - name: Install pip deps
+        run: |
+          pip install hiyapyco pykwalify
+          pip install -e ./polytope
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
+      - name: Login to Docker Hub
+        if: github.event_name == 'push'
+        uses: docker/login-action@v2
+        with:
+          registry: eccr.ecmwf.int
+          username: ${{ secrets.ECMWF_DOCKER_REGISTRY_USERNAME }}
+          password: ${{ secrets.ECMWF_DOCKER_REGISTRY_ACCESS_TOKEN }}
+
+      - name: (TODO) Create kubeconfig
+        run: |
+          echo "TODO" > kubeconfig.yml
+        working-directory: ./polytope-deployment/kubernetes
+
+      - name: Configure polytope
+        run: |
+          configure.py -f ../../polytope-config/default.yaml -f ../../polytope-config/deployment/kubernetes/dev.yaml
+        working-directory: ./polytope-deployment/kubernetes
+
+      - name: Build
+        run: skaffold build
+        working-directory: ./polytope-deployment/kubernetes
+
+      - name: Configure docker registry credentials
+        run: |
+          kubectl create secret generic polytope-registry-cred \
+            --from-file=.dockerconfigjson=${HOME}/.docker/config.json \
+            --type=kubernetes.io/dockerconfigjson 2>&1
+
+      - name: Deploy
+        run: helm install polytope .
+        working-directory: ./polytope-deployment/kubernetes
