--- a/kubernetes/templates/ingress.yaml
+++ b/kubernetes/templates/ingress.yaml
@@ -21,22 +21,16 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: polytope-ingress-master
+  name: polytope-ingress
   annotations:
-    dns.operators.ecmwf.int/on-transport-server: vs-transport-https
-    # cert-manager.io/cluster-issuer: ov-issuer
+    dns.operators.ecmwf.int/on-transport-server: {{ .Values.deployment.cert-issuer }}
     cert-manager.io/cluster-issuer: letsencrypt-nginx
     nginx.ingress.kubernetes.io/proxy-body-size: "100m"
     nginx.ingress.kubernetes.io/limit-rps: "50"
     nginx.ingress.kubernetes.io/limit-req-status-code: "429"
     nginx.org/proxy-buffering: "False"
     nginx.org/proxy-max-temp-file-size: "1024000m"
-    nginx.org/mergeable-ingress-type: master
     kubernetes.io/ingress.class: nginx
-    # nginx.org/location-snippets: |
-    #   chunked_transfer_encoding off;
-    # nginx.ingress.kubernetes.io/configuration-snippet: |
-    #   chunked_transfer_encoding off;
     {{ if .Values.deployment.ingress.https_rewrite }}
     nginx.org/redirect-to-https: "True"
     ingress.kubernetes.io/ssl-redirect: "True"
@@ -44,26 +38,6 @@ metadata:
     nginx.org/redirect-to-https: "False"
     ingress.kubernetes.io/ssl-redirect: "False"
     {{ end }}
-spec:
-  rules:
-  - host: {{ .Values.deployment.public_endpoint_dns_name }}
-  tls:
-  - hosts:
-    - {{ .Values.deployment.public_endpoint_dns_name }}
-    secretName: polytope-tls-3
-
----
-
-apiVersion: networking.k8s.io/v1
-kind: Ingress
-metadata:
-  name: polytope-ingress
-  annotations:
-    nginx.ingress.kubernetes.io/proxy-body-size: "100m"
-    nginx.ingress.kubernetes.io/limit-rps: "50"
-    nginx.ingress.kubernetes.io/limit-req-status-code: "429"
-    nginx.org/mergeable-ingress-type: minion
-    kubernetes.io/ingress.class: nginx
 spec:
   rules:
   - host: {{ .Values.deployment.public_endpoint_dns_name }}
@@ -76,6 +50,10 @@ spec:
             name: frontend
             port:
               number: 32002
+  tls:
+  - hosts:
+    - {{ .Values.deployment.public_endpoint_dns_name }}
+    secretName: polytope-tls-frontend
 
 ---
 
@@ -85,8 +63,7 @@ metadata:
   name: polytope-ingress-downloads
   annotations:
 
-    dns.operators.ecmwf.int/on-transport-server: vs-transport-https
-    # cert-manager.io/cluster-issuer: ov-issuer
+    dns.operators.ecmwf.int/on-transport-server: {{ .Values.deployment.cert-issuer }}
     cert-manager.io/cluster-issuer: letsencrypt-nginx
     nginx.ingress.kubernetes.io/proxy-body-size: "100m"
     nginx.ingress.kubernetes.io/limit-rps: "50"
@@ -94,10 +71,6 @@ metadata:
     nginx.org/proxy-buffering: "False"
     nginx.org/proxy-max-temp-file-size: "1024000m"
     kubernetes.io/ingress.class: nginx
-    # nginx.org/location-snippets: |
-    #   chunked_transfer_encoding off;
-    # nginx.ingress.kubernetes.io/configuration-snippet: |
-    #   chunked_transfer_encoding off;
     {{ if .Values.deployment.ingress.https_rewrite }}
     nginx.org/redirect-to-https: "True"
     ingress.kubernetes.io/ssl-redirect: "True"
@@ -107,15 +80,7 @@ metadata:
     {{ end }}
 
 
-    # dns.operators.ecmwf.int/on-transport-server: vs-transport-https
-    # nginx.ingress.kubernetes.io/proxy-body-size: "100m"
-    nginx.ingress.kubernetes.io/limit-rps: "50"
-    nginx.ingress.kubernetes.io/limit-req-status-code: "429"
-    # nginx.org/mergeable-ingress-type: minion
-    kubernetes.io/ingress.class: nginx
-    # we need to force an auth header into the request if it doesn't exist, we can do this by telling nginx that /api/v1/test is an auth server (it always returns 200). we could authenticate the staging per user if we wanted to.
-    # nginx.ingress.kubernetes.io/rewrite-target: /$2
-    # nginx.org/rewrites: "serviceName={{ .Values.staging.s3.host }} rewrite=/"
+    # we need to force an auth header into the request if it doesn't exist, we can do this by telling nginx that /api/v1/test is an auth server (it always returns 200).
     nginx.ingress.kubernetes.io/auth-url: http://{{ .Values.frontend.host }}.{{ .Release.Namespace }}.svc.cluster.local:{{ .Values.frontend.port }}/api/v1/test
     nginx.ingress.kubernetes.io/auth-response-headers: Authorization
 
@@ -140,9 +105,4 @@ spec:
   tls:
   - hosts:
     - downloads.{{ .Values.deployment.public_endpoint_dns_name }}
-    secretName: polytope-tls-4
-
-  # tls:
-  # - hosts:
-  #   - {{ .Values.deployment.public_endpoint_dns_name }}
-  #   secretName: polytope-tls
+    secretName: polytope-tls-downloads
