Ensure we use docker CLI to build

--- a/kubernetes/skaffold.yaml.in
+++ b/kubernetes/skaffold.yaml.in
@@ -16,7 +16,8 @@ build:
       secretName: polytope-registry-cred-opaque
   {% else %}
   local:
-    useBuildkit: True
+    useDockerCLI: true
+    useBuildkit: true
     concurrency: 1
   {% endif %}
 
@@ -44,13 +45,13 @@ build:
           value: "{{ build_no_proxy }}"
     {% else %}
     docker:
+      cliFlags:
+        - "--network=host"
     {% endif %}
       target: polytope-common
       dockerfile: polytope-deployment/common/Dockerfile
       buildArgs:
         proxy: "{{ build_proxy }}"
-      cliFlags:
-        - "--network=host"
 
 
   # Worker
