--- a/.github/workflows/check-publish.yaml
+++ b/.github/workflows/check-publish.yaml
@@ -141,6 +141,7 @@ jobs:
       - name: Configure docker registry credentials
         run: |
           export KUBECONFIG=./kubeconfig.yml
+          kubectl --namespace polytope-ci delete secret polytope-registry-cred --ignore-not-found
           kubectl --namespace polytope-ci create secret generic polytope-registry-cred \
             --from-file=.dockerconfigjson=${HOME}/.docker/config.json \
             --type=kubernetes.io/dockerconfigjson 2>&1
