--- a/.github/workflows/check-publish.yaml
+++ b/.github/workflows/check-publish.yaml
@@ -150,5 +150,5 @@ jobs:
       - name: Deploy
         run: |
           export KUBECONFIG=./kubeconfig.yml
-          helm install polytope . --namespace polytope-ci
+          helm upgrade -i polytope . --namespace polytope-ci
         working-directory: ./polytope-deployment/kubernetes
